# Syno

./: .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  bugfix.patch  cloc.sh  pyproject.toml  readme.md  requirements.txt  setup.py
KAS/: AbstractExplorer.py  Assembler.py  Bindings.py  Explorer.py  KernelPack.py  Modifier.py  Node.py  Placeholder.py  Sampler.py  SearchSpaceExplorer.py  Statistics.py  Tree.py  TreeExplorer.py  TreeNode.py  Utils.py  __init__.py
cmake/: toolchain.asan.cmake  toolchain.ubsan.cmake
docs/: design.md  features.md  plans.md  potential_scenario.md
experiments/: .gitignore  analyze.py  client.py  compute_mean_std.py  evaluator.py  full_evaluate.py  launch_client.sh  launch_mcts_client.sh  launch_mcts_server.sh  launch_reevaluator.sh  launch_server.sh  mcts_client.py  mcts_master.py  mcts_server.py  mount_ram.sh  parse_server_log.py  plot.py  plot_loss.py  reevaluator.py  results.md  run_reevaluator.sh  run_server.sh  run_tmux.sh  run_tmux_all.sh  run_workers.sh  search.py  server.py  test.sh  test_fast_update.py  test_run.py  train.py
experiments/analysis/: AbstractExplorer.py  SearchSpaceExplorer.py  __init__.py  baseline.json  compression_plot.py  end_to_end_perf_plot.py  estimate_nas_pte.py  explorer.py  layerwise.py  mcts_explorer.py  mcts_stats.py  plot-loss.py  plot-models.py  plot-quantization.py  plot-trend.py  plot-trends.py  plot.py  plot_utils.py  re_codegen.py  sync_perf.py  sync_perf_a100.py  utils.py
experiments/base/: __init__.py  dataset.py  device.py  imagenet_trainer.py  log.py  loss.py  mem.py  optim.py  parser.py  quant.py  trainer.py
experiments/canvas/: client.py  offline_selector.py  selector.py
experiments/cifar10_classification/: .gitignore  evaluator.py  mcts_master.py  parse_server_log.py  plot_comparison.py  run_tmux.sh  search.py  train.py
experiments/ffcv-imagenet/: README.md  train_imagenet.py
experiments/kas/: .gitignore  evaluator.py  mcts_master.py  parse_server_log.py  run_server.sh  run_tmux.sh  search.py  train.py
experiments/milestones/: densenet121_sgd_005_100.json  densenet161_sgd_005_100.json  efficientnet_b1_sgd_005_100.json  efficientnet_b2_sgd_005_100.json  efficientnet_v2s_sgd_01_100.json  mnasnet1_0_sgd_005_100.json  mobilenet_v2_sgd_005_100.json  r3d_18.json  regnet_x_800mf_sgd_005_100.json  resnet18_sgd_01_100.json  resnet34_sgd_01_100.json  resnext29_2x64d_sgd_01_100.json  resnext50_32x4d_sgd_01_100.json  vitb16_sgd_01_100.json
experiments/mnist_classification/: .gitignore  evaluator.py  mcts_master.py  parse_server_log.py  plot_comparison.py  random_search_master.py  run_server.sh  run_tmux.sh  search.py  train.py  visualization.py
experiments/mp_utils/: __init__.py  evaluate_path.py  mcts_trainer.py  server.py
experiments/performance/: .gitignore  MetaScheduleTuner.py  Model.py  Tuner.py  benchmark_torch.py  common.py  export_onnx.py  export_relax.py  export_torch.py  grid_torch.py  grid_torch.sh  grid_tune.json  grid_tune.py  grid_tune_layers.py  import_kas.py  model.py  perf_torch.py  performance_vs_accuracy.py  progress_utils.py  quantize.py  readme.md  tvm_kernel.example.py  tvm_kernel_example.py
experiments/scripts/: beam_resnet18_cifar100.sh  benchmark.sh  benchmark_r3d.sh  cifar100_benchmark.sh  explorer_convnet_cifar100.sh  explorer_densenet_cifar100.sh  explorer_efficientnetv2s_cifar100.sh  explorer_mobilenet_cifar100.sh  explorer_r3d_18.sh  explorer_resnet18_cifar100.sh  explorer_vit_cifar100.sh  long_run_rwkv.sh  mcts_densenet_cifar100.sh  mcts_efficientv2s_cifar100.sh  mcts_explorer_resnet18_cifar100.sh  mcts_gcn_cora.sh  mcts_gpt_lm1b.sh  plot.sh  (+20 more)
runtime/: CMakeLists.txt  Loader.cpp  Loader.hpp  Runtime.cpp  RuntimeGen.cpp
src/: CMakeLists.txt
src/CodeGen/: CMakeLists.txt  Common.cpp  GraphvizGen.cpp  HalideGen.cpp  Kernel.cpp  Loader.cpp  PyTorchGen.cpp  RuntimeGen.cpp  TVMCodeGen.cpp
src/Core/: Autodiff.cpp  BindingContext.cpp  CMakeLists.txt  CodeGen.cpp  Colors.cpp  DimVisitor.cpp  Dimension.cpp  FLOPsGame.cpp  Graph.cpp  IR.cpp  Iterator.cpp  IteratorEvaluator.cpp  Lower.cpp  Manipulation.cpp  MapReduce.cpp  Parser.cpp  Pass.cpp  PrimitiveOp.cpp  Reduce.cpp  Representation.cpp  Shape.cpp  Size.cpp  Tensor.cpp  TensorView.cpp
src/Python/: Bindings.cpp  CMakeLists.txt  Runtime.cpp
src/Runtime/: CMakeLists.txt  Loader.cpp
src/Search/: AbstractStage.cpp  CMakeLists.txt  DimensionsStage.cpp  FLOPsGame.cpp  FinalStage.cpp  Finalize.cpp  Node.cpp  NormalStage.cpp  PrimitiveShapeOp.cpp  ReductionStage.cpp  ReductionStore.cpp  Sample.cpp  ShapeComplexity.cpp  ShapeNode.cpp  Stage.cpp
src/Transforms/: CMakeLists.txt  Canonicalization.cpp  Contraction.cpp  Expand.cpp  Finalize.cpp  Forward.cpp  Map.cpp  MapReduce.cpp  Merge.cpp  Reduce.cpp  Reshape.cpp  Share.cpp  Shift.cpp  Split.cpp  Stride.cpp  Unfold.cpp
tests/: CMakeLists.txt  CodeGen.cpp  Core.cpp  Forward.cpp  Padding.cpp  Search.cpp  Transforms.cpp  Utils.cpp  bug_collect_handles.py  semantics_test_conv2d.py  semantics_test_pool2d.py  test_cpp_bindings.py  test_mcts.py  test_mcts_mock.py  test_mock.py  test_sampler.py  test_sampler_realize.py
tests/Core/: CMakeLists.txt  Colors.cpp  FLOPsGame.cpp  IR.cpp  Padding.cpp  Parser.cpp  Size.cpp  Tensor.cpp
tests/IR/: CMakeLists.txt  InterdependentShares.cpp  OuterProduct.cpp  PooledConv.cpp  Prelude.hpp  SequentialShares.cpp
tests/Search/: CMakeLists.txt  Expand.cpp  FLOPsGame.cpp  Finalize.cpp  Forward.cpp  Misc.cpp  Prelude.hpp  Sampler.cpp  ShapeComplexity.cpp
tests/Semantics/: CMakeLists.txt  Conv2d.cpp  Pool2d.cpp  Prelude.hpp  conv2d.py  test_semantics_conv2d.py  test_semantics_pool2d.py
tests/Transforms/: CMakeLists.txt  Canonicalization.cpp  DimensionStore.cpp  Expand.cpp  Forward.cpp  MapReduce.cpp  Merge.cpp  OperationStore.cpp  Prelude.hpp  PrimitiveOpStore.cpp  Reduce.cpp  Reshape.cpp  Share.cpp  Shift.cpp  Split.cpp  StrideUnfold.cpp  Transforms.cpp
tests/Utils/: explore.py  tree_explore.py
tests/bug_reports/: test_assembler_convert_to_path.py  test_sampler_finalize.py
(+222 files in other folders)
